--- a/Encrypt_Decrypt.ipynb
+++ b/Encrypt_Decrypt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,172 +157,31 @@
    "metadata": {},
    "source": [
     "**Entrée:**\n",
-    "    H: matrice de contrôle de parité (pas nécessairement QC-MDPC)\n",
-    "    y: mot à décoder\n",
-    "    N: seuil pour le nombre d'itérations de produit somme\n",
-    "    p: probabilité qu'un bit soit le chiffre 0\n",
-    "    **Sortie:**\n",
-    "    si le décodage est réussi, retourne le mot décodé\n",
-    "    sinon retourne 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sumProduct(H, y, N, p):\n",
-    "    \n",
-    "    print(\"\\nStarting Sum-Product Algorithm...\")\n",
-    "    rows, cols = H.shape\n",
-    "    \n",
-    "    #initialiser les variables\n",
-    "    t = 0\n",
-    "    checkSum = 0\n",
-    "    numOnes = 0\n",
-    "    prodTerm = 1\n",
-    "\n",
-    "    #initialiser les tableaux et les matrices\n",
-    "    bitsAdjList = [[] for i in range(cols)]\n",
-    "    checksAdjList = [[] for i in range(rows)]\n",
-    "    estimate = np.zeros(2)\n",
-    "    bits = np.zeros(rows, dtype = np.int32)\n",
-    "    checks = np.zeros(rows, dtype = np.int32)\n",
-    "    M = np.zeros((rows, cols))\n",
-    "    E = np.zeros((rows, cols))\n",
-    "    r = np.zeros(cols)\n",
-    "    L = np.zeros(cols)\n",
-    "    x = np.zeros(cols, dtype = np.int32)\n",
-    "    \n",
-    "    estimate = [math.log((1-p)/p), math.log(p/(1-p))]   #L(C_j|Y_j=y_j)\n",
-    "    \n",
-    "    #configurer le graphe de Tanner avec des listes adjancency \n",
-    "    for i in range(rows):\n",
-    "        for j in range(cols):\n",
-    "            if H[i, j] == 1:\n",
-    "                bitsAdjList[j].append(i)\n",
-    "                checksAdjList[i].append(j)\n",
-    "\n",
-    "    #Step 1: vérifier si y est un mot de code avec 1 tour de bit-flipping\n",
-    "    for i in range(rows):\n",
-    "        for j in checksAdjList[i]:\n",
-    "            checkSum += y[j]\n",
-    "        if (checkSum % 2) == 1:\n",
-    "            numOnes += 1\n",
-    "        checkSum = 0\n",
-    "        \n",
-    "    if numOnes == 0:\n",
-    "        return y\n",
-    "        \n",
-    "    checkSum = 0\n",
-    "    numOnes = 0\n",
-    "\n",
-    "    #Step 2\n",
-    "    for j in range(cols):\n",
-    "        r[j] = estimate[int(y[j])]\n",
-    "        for i in bitsAdjList[j]:\n",
-    "            M[i,j] = r[j]\n",
-    "    while (t < N):\n",
-    "        t += 1\n",
-    "        \n",
-    "        #Step 3: calculer E [i, j]\n",
-    "\n",
-    "        #print(\"M:\", \"\\n\", M, \"\\n\")\n",
-    "        for i in range(rows):\n",
-    "            prodTerm = 1\n",
-    "            for j in checksAdjList[i]:\n",
-    "                prodTerm *= np.tanh(0.5*M[i,j])\n",
-    "            for j in checksAdjList[i]:\n",
-    "                divisor = np.tanh(0.5*M[i,j])\n",
-    "                try:\n",
-    "                    E[i,j] = math.log((1+(prodTerm/divisor))/(1-(prodTerm/divisor)))\n",
-    "                except ValueError:\n",
-    "                    print(\"Cannot compute E[i,j]\")\n",
-    "                    return -1\n",
-    "        #print(\"E:\", \"\\n\", E, \"\\n\")\n",
-    "        \n",
-    "        #Step 4:\n",
-    "        L = np.copy(r)\n",
-    "        #L = L * (N-t) / N\n",
-    "            \n",
-    "        for j in range(cols):\n",
-    "            for s in bitsAdjList[j]:\n",
-    "                L[j] += E[s,j]\n",
-    "            if L[j] > 0:\n",
-    "                x[j] = 0\n",
-    "            elif L[j] < 0:\n",
-    "                x[j] = 1\n",
-    "        #print(\"L:\\n\", L)\n",
-    "        \n",
-    "        #Step 4: vérifier si x est un mot de code avec 1 tour de bit-flipping   \n",
-    "        checkSum = 0\n",
-    "        numOnes = 0\n",
-    "        for i in range(rows):\n",
-    "            for j in checksAdjList[i]:\n",
-    "                checkSum += x[j]\n",
-    "            if (checkSum % 2) == 1:\n",
-    "                numOnes += 1\n",
-    "            checkSum = 0\n",
-    "        if numOnes == 0:\n",
-    "            print(\"Decoded in\", t, \"step(s).\")\n",
-    "            return x\n",
-    "\n",
-    "        #Step 5:\n",
-    "        for j in range(cols):\n",
-    "            for i in bitsAdjList[j]:\n",
-    "                M[i,j] = L[j] - E[i,j]\n",
-    "\n",
-    "    print(\"Cannot decode\")\n",
-    "    return 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Entrée:**\n",
     "        H: matrice QC-MDPC\n",
     "        y: texte chiffré\n",
-    "        méthode: soit 'BF' ou 'SP', représentant Bit-Flipping et Sum-Product resp.\n",
-    "        N: coupure pour non. des itérations de décodage\n",
-    "        p: probabilité d'erreur (uniquement pour method = 'SP'. Si method = 'BF',\n",
-    "        peu importe la valeur de p\n",
+    "        méthode:BF, représentant Bit-Flipping.\n",
     "    **Sortie:**\n",
     "        decryptedText: texte déchiffré\n",
     "        (le texte décrypté ne peut être qu'un entier si le décryptage échoue)\n",
-    "    bitFlipping renvoie 0 si le décodage échoue en raison d'un dépassement de l'itération max\n",
-    "    SumProduct renvoie 0 si le décodage échoue en raison d'un dépassement de l'itération maximale\n",
-    "    SumProduct renvoie -1 si le décodage échoue en raison d'une erreur de calcul E [i, j]"
+    "    bitFlipping renvoie 0 si le décodage échoue en raison d'un dépassement de l'itération max"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decryptMcEliece(H, y, method, N, p):\n",
+    "def decryptMcEliece(H, y, method, N):\n",
     "  \n",
     "    r, n = H.shape\n",
-    "\n",
-    "    if (method == 'BF'):\n",
-    "        #Décryptage\n",
-    "        decryptedText = bitFlipping(H, y, N)\n",
+    "    #Décryptage\n",
+    "    decryptedText = bitFlipping(H, y, N)\n",
     "        \n",
-    "        if type(decryptedText) == int:\n",
-    "            print(\"Cannot decode by Bit-Flipping algorithm\")\n",
-    "        else :\n",
-    "            decryptedText = decryptedText[0: n - r]\n",
-    "            \n",
-    "    elif (method == 'SP'):\n",
-    "        #Décryptage\n",
-    "        decryptedText = sumProduct(H, y, N, p)\n",
-    "        \n",
-    "        if type(decryptedText) == int:\n",
-    "            print(\"Cannot decode by Sum-Product algorithm\")\n",
-    "        else :\n",
-    "            decryptedText = decryptedText[0: n - r]\n",
+    "    if type(decryptedText) == int:\n",
+    "        print(\"Cannot decode by Bit-Flipping algorithm\")\n",
+    "    else :\n",
+    "        decryptedText = decryptedText[0: n - r]\n",
     "            \n",
     "    return decryptedText\n"
    ]
@@ -339,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,13 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def demo(H, y):\n",
-    "\n",
-    "\n",
     "    print(\"H:\\n\", H)\n",
     "    r, n = H.shape\n",
     "    w = sum(H[0,:] == 1)\n",
@@ -387,7 +244,6 @@
     "    print(\"\\n######### Starting the Bit-Flipping Algorithm... #########\\n\")\n",
     "\n",
     "    print(\"s = yH^T:\", s)\n",
-    "    print(\"sigmaJ:\", np.matmul(s,H))\n",
     "    while (np.count_nonzero(s) > 0 and flipped == 1):\n",
     "        flipped = 0\n",
     "        # syndrome weight\n",
@@ -396,15 +252,13 @@
     "        for j in range(n):\n",
     "            if (sum((s + H[:,j]) == 2)) >= T * d:\n",
     "                print(\"FLIPPED position %d\" % j)\n",
-    "                y[j] = y[j] ^ 1\n",
     "                print(\"y:\", y)\n",
+    "                y[j] = y[j] ^ 1\n",
+    "                \n",
     "                s = convertBinary(np.matmul(y, np.transpose(H)))\n",
     "                print(\"s = yH^T:\", s)\n",
-    "                flipped = 1\n",
-    "                \n",
-    "        \n",
+    "                flipped = 1 \n",
     "        iteration += 1\n",
-    "        \n",
     "        # syndrome\n",
     "        s = np.matmul(y, np.transpose(H))\n",
     "        s = convertBinary(s)\n",
@@ -419,39 +273,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G:\n",
-      " [[1 0 0 0 0 0 0 0 1 0]\n",
-      " [0 1 0 0 0 0 0 0 0 1]\n",
-      " [0 0 1 0 0 1 0 0 0 0]\n",
-      " [0 0 0 1 0 0 1 0 0 0]\n",
-      " [0 0 0 0 1 0 0 1 0 0]]\n",
+      "génération d'une matrice aléatoire H:\n",
+      " [[0 1 1 1 0 1 0 1 1 0]\n",
+      " [0 0 1 1 1 0 1 0 1 1]\n",
+      " [1 0 0 1 1 1 0 1 0 1]\n",
+      " [1 1 0 0 1 1 1 0 1 0]\n",
+      " [1 1 1 0 0 0 1 1 0 1]]\n",
+      "génération d'une matrice génératrice G:\n",
+      " [[1 0 0 0 0 1 1 0 1 0]\n",
+      " [0 1 0 0 0 0 1 1 0 1]\n",
+      " [0 0 1 0 0 1 0 1 1 0]\n",
+      " [0 0 0 1 0 0 1 0 1 1]\n",
+      " [0 0 0 0 1 1 0 1 0 1]]\n",
       "\n",
-      "Plaintext m: [1 0 0 0 1]\n",
+      "Message aléatoire m: [1 0 1 0 0]\n",
       "\n",
-      " e: [0 1 0 0 0 0 0 0 0 1]\n",
+      "Vecteur d'erreur aléatoir e: [0 0 1 0 0 0 1 0 0 0]\n",
+      "\n",
+      "Message crypter C: [1 0 0 0 0 0 0 1 0 0]\n",
       "H:\n",
-      " [[0 1 1 1 0 1 1 0 0 1]\n",
-      " [0 0 1 1 1 1 1 1 0 0]\n",
-      " [1 0 0 1 1 0 1 1 1 0]\n",
-      " [1 1 0 0 1 0 0 1 1 1]\n",
-      " [1 1 1 0 0 1 0 0 1 1]]\n",
+      " [[0 1 1 1 0 1 0 1 1 0]\n",
+      " [0 0 1 1 1 0 1 0 1 1]\n",
+      " [1 0 0 1 1 1 0 1 0 1]\n",
+      " [1 1 0 0 1 1 1 0 1 0]\n",
+      " [1 1 1 0 0 0 1 1 0 1]]\n",
       "\n",
-      "y=mH^T + e: [1 1 0 0 1 0 0 1 1 1] #ciphertext\n",
+      "y=mH^T + e: [1 0 0 0 0 0 0 1 0 0] #ciphertext\n",
       "Threshold T: 3\n",
       "\n",
       "######### Starting the Bit-Flipping Algorithm... #########\n",
       "\n",
-      "s = yH^T: [0 0 0 0 0]\n",
-      "sigmaJ: [0 0 0 0 0 0 0 0 0 0]\n",
+      "s = yH^T: [1 0 0 1 0]\n",
       "Decrypted text:\n",
-      " [1 1 0 0 1 0 0 1 1 1]\n",
+      " [1 0 0 0 0 0 0 1 0 0]\n",
+      "Cannot decode\n",
       "Decryption failure!\n"
      ]
     },
@@ -461,7 +323,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,26 +342,28 @@
     "w = wi * n0\n",
     "t = 2\n",
     "\n",
-    "##################################### Fonctions de test ####################################\n",
+    "#####################################Fonctions de test ####################################\n",
     "\n",
     "# générer une matrice aléatoire (n, r, w) -QC-MDPC H\n",
     "H = genQCMDPC(n, r, w)\n",
-    "\n",
+    "print(\"génération d'une matrice aléatoire H:\\n\", H)\n",
     "# Générer la matrice génératrice G correspondante\n",
     "G = genGenQCMDPC(H)\n",
-    "print(\"G:\\n\", G)\n",
+    "print(\"génération d'une matrice génératrice G:\\n\", G)\n",
     "# générer un message aléatoire m de poids k\n",
     "m = genRandomVector(r, k)\n",
     "\n",
-    "print(\"\\nPlaintext m:\", m)\n",
+    "print(\"\\nMessage aléatoire m:\", m)\n",
     "\n",
     "# générer un vecteur d'erreur aléatoire e de poids t\n",
     "e = genRandomVector(n, t)\n",
     "\n",
-    "print(\"\\n e:\", e)\n",
+    "print(\"\\nVecteur d'erreur aléatoir e:\", e)\n",
     "\n",
     "# crypter le message m\n",
     "y = encryptMcEliece(G, m, e)\n",
+    "\n",
+    "print(\"\\nMessage crypter C:\", y)\n",
     "\n",
     "# décrypter le texte chiffré\n",
     "decryptedText = demo(H, y)\n",
