--- a/QC_MDPC.ipynb
+++ b/QC_MDPC.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Génération des clés ##\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import math\n",
-    "from sympy import *\n",
-    "import numpy as np\n",
-    "from scipy import special\n",
+    "import csv #lecture écriture des fichier .csv\n",
+    "import math # un module qui permet d’avoir accès aux fonctions mathématiques\n",
+    "from sympy import * # permet de faire des calculs symboliques sur des expressions mathématiques (ex : comment implémeneter le calcul matriciel en python.. )\n",
+    "import numpy as np # faire les calculs scientifiques de base et de manipuler assez facilement les tableaux multidimensionnels, faire du calcul matriciel, l'algère linéaire...\n",
+    "from scipy import special # La librairie SciPy complète le duo en proposant des algorithmes et fonctions utilitaires construits sur NumPy ex: algo d'optimisation\n",
     "from scipy.stats import binom, hypergeom\n",
     "import networkx as nx\n",
     "from networkx.algorithms import bipartite\n",
@@ -26,7 +33,9 @@
     "      r: longueur de la première rangée\n",
     "      wi: poids de Hamming de la première rangée.\n",
     "     **Sortie:**\n",
-    "      tableau numpy de la première rangée d'un bloc circulant"
+    "      tableau numpy de la première rangée d'un bloc circulant.\n",
+    "(wi :les nombres des 1 dans les lignes de H_i) (w : le nombre des 1 dans les lignes de la mtrice H)      \n",
+    " "
    ]
   },
   {
@@ -36,11 +45,11 @@
    "outputs": [],
    "source": [
     "def genFirstRow(r, wi):\n",
-    "\n",
+    "    #créer un array et nommé firstrow initialiser O sa longueur et r\n",
     "    firstRow = np.zeros(r, dtype=np.int32)\n",
-    "    # choisir les nombres wi de la plage (wi)\n",
+    "    # choisir les nombres wi et créer un array de sa longueur (wi) contenant des nombres aléatoire inférieur de r \n",
     "    randomArray = np.random.choice(r, wi, replace=False)\n",
-    "\n",
+    " # ces nombres sont les positions des elements de firstrow qu'on va changer de 0 à 1\n",
     "    for i in randomArray:\n",
     "        firstRow[i] = 1\n",
     "\n",
@@ -236,7 +245,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   **Entree**:\n",
+    "  \n",
+    " \n",
+    "  \n",
+    "  **Entree**:\n",
     "    firstRow: la première ligne de la matrice QC-MDPC\n",
     "    n: longueur du code / no QC-MDPC. de nœuds de bits dans le code QC-MDPC\n",
     "    r: non. de lignes / cols de chaque bloc circulant du code QC-MDPC\n",
