--- a/Encrypt_Decrypt.ipynb
+++ b/Encrypt_Decrypt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,9 +206,9 @@
     "\n",
     "    status = np.array_equal(plaintext, decryptedText)\n",
     "    if (status == True):\n",
-    "        print(\"Decryption success!\")\n",
+    "        print(\"Succès du décryptage!\")\n",
     "    else:\n",
-    "        print(\"Decryption failure!\")\n",
+    "        print(\"Échec du décryptage!\")\n",
     "        \n",
     "    return status"
    ]
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +239,9 @@
     "    flipped = 1\n",
     "\n",
     "    s = convertBinary(np.matmul(y, np.transpose(H)))\n",
-    "    print(\"\\ny=mH^T + e:\", y, \"#ciphertext\")\n",
-    "    print(\"Threshold T:\", d)\n",
-    "    print(\"\\n######### Starting the Bit-Flipping Algorithm... #########\\n\")\n",
+    "    print(\"\\ntext chiffre:\", y)\n",
+    "    print(\"seuil T:\", d)\n",
+    "    print(\"\\n######### Démarrage de l'algorithme de Bit-Flipping... #########\\n\")\n",
     "\n",
     "    print(\"s = yH^T:\", s)\n",
     "    while (np.count_nonzero(s) > 0 and flipped == 1):\n",
@@ -263,7 +263,7 @@
     "        s = np.matmul(y, np.transpose(H))\n",
     "        s = convertBinary(s)\n",
     "\n",
-    "    print(\"Decrypted text:\\n\", y)\n",
+    "    print(\"test Dechiffre:\\n\", y)\n",
     "    if (sum(s == 1) == 0):\n",
     "        return y[0: n-r]\n",
     "    else:\n",
@@ -273,48 +273,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "génération d'une matrice aléatoire H:\n",
-      " [[0 1 1 1 0 1 0 1 1 0]\n",
-      " [0 0 1 1 1 0 1 0 1 1]\n",
-      " [1 0 0 1 1 1 0 1 0 1]\n",
-      " [1 1 0 0 1 1 1 0 1 0]\n",
-      " [1 1 1 0 0 0 1 1 0 1]]\n",
-      "génération d'une matrice génératrice G:\n",
-      " [[1 0 0 0 0 1 1 0 1 0]\n",
-      " [0 1 0 0 0 0 1 1 0 1]\n",
-      " [0 0 1 0 0 1 0 1 1 0]\n",
-      " [0 0 0 1 0 0 1 0 1 1]\n",
-      " [0 0 0 0 1 1 0 1 0 1]]\n",
-      "\n",
-      "Message aléatoire m: [1 0 1 0 0]\n",
-      "\n",
-      "Vecteur d'erreur aléatoir e: [0 0 1 0 0 0 1 0 0 0]\n",
-      "\n",
-      "Message crypter C: [1 0 0 0 0 0 0 1 0 0]\n",
+      "G:\n",
+      " [[1 0 0 0 0 1 0 0 0 0]\n",
+      " [0 1 0 0 0 0 1 0 0 0]\n",
+      " [0 0 1 0 0 0 0 1 0 0]\n",
+      " [0 0 0 1 0 0 0 0 1 0]\n",
+      " [0 0 0 0 1 0 0 0 0 1]]\n",
+      "\\Texte en clair m: [0 1 1 0 0]\n",
       "H:\n",
-      " [[0 1 1 1 0 1 0 1 1 0]\n",
-      " [0 0 1 1 1 0 1 0 1 1]\n",
-      " [1 0 0 1 1 1 0 1 0 1]\n",
-      " [1 1 0 0 1 1 1 0 1 0]\n",
-      " [1 1 1 0 0 0 1 1 0 1]]\n",
+      " [[1 1 0 1 0 1 1 0 1 0]\n",
+      " [0 1 1 0 1 0 1 1 0 1]\n",
+      " [1 0 1 1 0 1 0 1 1 0]\n",
+      " [0 1 0 1 1 0 1 0 1 1]\n",
+      " [1 0 1 0 1 1 0 1 0 1]]\n",
       "\n",
-      "y=mH^T + e: [1 0 0 0 0 0 0 1 0 0] #ciphertext\n",
-      "Threshold T: 3\n",
+      "text chiffre: [0 1 1 0 0 0 1 1 1 0]\n",
+      "seuil T: 3\n",
       "\n",
-      "######### Starting the Bit-Flipping Algorithm... #########\n",
+      "######### Démarrage de l'algorithme de Bit-Flipping... #########\n",
       "\n",
-      "s = yH^T: [1 0 0 1 0]\n",
-      "Decrypted text:\n",
-      " [1 0 0 0 0 0 0 1 0 0]\n",
-      "Cannot decode\n",
-      "Decryption failure!\n"
+      "s = yH^T: [1 0 1 1 0]\n",
+      "FLIPPED position 3\n",
+      "y: [0 1 1 0 0 0 1 1 1 0]\n",
+      "s = yH^T: [0 0 0 0 0]\n",
+      "test Dechiffre:\n",
+      " [0 1 1 1 0 0 1 1 1 0]\n",
+      "Échec du décryptage!\n"
      ]
     },
     {
@@ -323,53 +314,53 @@
        "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# paramètres de code\n",
+    "##################################### Setting parameters ###################################\n",
+    "\n",
+    "# code parameters\n",
     "n0 = 2\n",
     "r = 5\n",
     "wi = 3\n",
     "\n",
     "N = 20\n",
     "k = r // 2\n",
-    "################################## Paramètres de traitement ###################################\n",
+    "#decryption parameters\n",
+    "t = 1\n",
+    "\n",
+    "################################## Processing parameters ###################################\n",
     "\n",
     "n = n0 * r\n",
     "w = wi * n0\n",
-    "t = 2\n",
     "\n",
-    "#####################################Fonctions de test ####################################\n",
+    "##################################### Testing functions ####################################\n",
     "\n",
-    "# générer une matrice aléatoire (n, r, w) -QC-MDPC H\n",
+    "# generate a random (n,r,w)-QC-MDPC matrix H\n",
     "H = genQCMDPC(n, r, w)\n",
-    "print(\"génération d'une matrice aléatoire H:\\n\", H)\n",
-    "# Générer la matrice génératrice G correspondante\n",
+    "\n",
+    "# Generate the corresponding generator matrix G\n",
     "G = genGenQCMDPC(H)\n",
-    "print(\"génération d'une matrice génératrice G:\\n\", G)\n",
-    "# générer un message aléatoire m de poids k\n",
+    "print(\"G:\\n\", G)\n",
+    "# generate a random message m of weight k\n",
     "m = genRandomVector(r, k)\n",
     "\n",
-    "print(\"\\nMessage aléatoire m:\", m)\n",
+    "print(\"\\Texte en clair m:\", m)\n",
     "\n",
-    "# générer un vecteur d'erreur aléatoire e de poids t\n",
+    "# generate a random error vector e of weight t\n",
     "e = genRandomVector(n, t)\n",
     "\n",
-    "print(\"\\nVecteur d'erreur aléatoir e:\", e)\n",
-    "\n",
-    "# crypter le message m\n",
+    "# encrypt the message m\n",
     "y = encryptMcEliece(G, m, e)\n",
     "\n",
-    "print(\"\\nMessage crypter C:\", y)\n",
-    "\n",
-    "# décrypter le texte chiffré\n",
+    "# decrypt the ciphertext\n",
     "decryptedText = demo(H, y)\n",
     "\n",
-    "# vérifier si le décryptage est correct\n",
-    "decryptSuccess(m, decryptedText)\n"
+    "# check if decryption is correct\n",
+    "decryptSuccess(m, decryptedText)"
    ]
   },
   {
